# Component-EventBus

./: CMakeLists.txt  CMakePresets.json  README.md  win_build.cmd
examples/: main.c
examples/esp-idf/: main.c
examples/windows/: example1.c  example2.c
include/: event.h  eventbus.h  eventbus_def.h  subscriber.h
src/: event.c  eventbus.c
